# aico2caom2

./: Dockerfile  README.md  setup.cfg  setup.py
aico2caom2/: composable.py  fits2caom2_augmentation.py  main_app.py  preview_augmentation.py
aico2caom2/tests/: conftest.py  test_caom_gen_visit.py  test_composable.py  test_main_app.py  test_preview_augmentation.py  test_storage_name.py
aico2caom2/tests/data/: 2023_07_04__17_07_33-raw_v.expected.xml  2023_07_04__17_07_33-raw_v.fits.header  2023_07_04__17_08_51-raw_v.expected.xml  2023_07_04__17_08_51-raw_v.fits.header  2023_07_04__17_09_43-raw_v.expected.xml  2023_07_04__17_09_43-raw_v.fits.header  2023_07_04__17_28_25-raw_v.expected.xml  2023_07_04__17_28_25-raw_v.fits.header  2023_07_04__17_28_51-raw_v.expected.xml  2023_07_04__17_28_51-raw_v.fits.header  2023_07_05__04_43_34-raw_v.expected.xml  2023_07_05__04_43_34-raw_v.fits.header  2023_07_05__04_44_09-raw_v.expected.xml  2023_07_05__04_44_09-raw_v.fits.header  2023_07_05__04_44_44-raw_v.expected.xml  2023_07_05__04_44_44-raw_v.fits.header  2023_07_05__04_45_19-raw_v.expected.xml  2023_07_05__04_45_19-raw_v.fits.header  2023_07_05__04_45_53-raw_v.expected.xml  2023_07_05__04_45_53-raw_v.fits.header  2023_07_05__04_46_27-raw_v.expected.xml  a2020_06_26_06_50_01.expected.xml  (+3 more)
blank2caom2/: composable.py  fits2caom2_augmentation.py  main_app.py
blank2caom2/tests/: test_composable.py  test_main_app.py  test_storage_name.py
config/: config.yml  state.yml
scripts/: aico_run.sh  aico_run_incremental.sh  aico_weathercam.py  blank_run_state.sh  docker-entrypoint.sh
