[aliases]
test = pytest

[coverage:run]
omit = */tests/*

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
testpaths = aico2caom2

[bdist_wheel]
universal=1

[metadata]
package_name = aico2caom2
description = Starting point for application to generate CAOM2 observations.
long_description = TBD 
author = Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
url = TBD
edit_on_github = False
github_project = opencadc/aico2caom2
install_requires =
    cadcdata
    cadctap
    caom2
    caom2repo
    caom2utils
    importlib-metadata
    python-dateutil
    PyYAML
    spherical-geometry
    vos

# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.1.0

[flake8]
max-line-length = 120

[entry_points]
aico_run = aico2caom2.composable:run
aico_run_incremental = aico2caom2.composable:run_incremental
